--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "gray-matter": "^4.0.3",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "reading-duration": "^1.1.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
